[tool.poetry]
name = "comet"
version = "0.1.0"
description = "Stremio's fastest torrent/debrid search add-on."
authors = ["Goldy"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/g0ldyy/comet"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "*"
fastapi = "*"
aiohttp = "*"
asyncio = "*"
loguru = "*"
databases = "*"
pydantic-settings = "*"
bencode-py = "*"
httpx = "*"
curl-cffi = "*"
cryptography = "^43.0.0"
orjson = "*"
asyncpg = "*"
aiosqlite = "*"
jinja2 = "*"
rank-torrent-name = "*"
parsett = "*"
bencodepy = "^0.9.5"

[tool.poetry.group.dev.dependencies]
isort = "*"
pyright = "*"
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
